# alcazar-gen

./: CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: Mergesat.cmake  Minisat.cmake
src/: board.cpp  board.h  commandline.cpp  commandline.h  coordinates.h  formula.cpp  formula.h  generator.cpp  generator.h  main.cpp  path.cpp  path.h  templateBoard.cpp  templateBoard.h  wall.cpp  wall.h
src/minisat/: LICENSE  README
templates/: 4fields.txt
